@@ -10,10 +10,10 @@
 # Lucide version string
 # see README.DEV for the versioning scheme
 #
-VERSION		= 1.32 beta
+VERSION		= 1.3.2
+BUILD		= beta
 #
-# Lucide WPI version strings
-WPIVERSION	= 1.3.2
+# Lucide WPI build is only one char
 WPIBUILD	= 0
 
 #
